Experimentation with Tagging widgets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,7 @@ set(okularpart_SRCS
    ui/sidebar.cpp
    ui/side_reviews.cpp
    ui/snapshottaker.cpp
+   ui/taggingwidgets.cpp
    ui/thumbnaillist.cpp
    ui/toc.cpp
    ui/tocmodel.cpp
