Began adding tagging properties

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,7 +281,10 @@ set(okularpart_SRCS
    ui/sidebar.cpp
    ui/side_reviews.cpp
    ui/snapshottaker.cpp
+   ui/taggingpopup.cpp
+   ui/taggingpropertiesdialog.cpp
    ui/taggingwidgets.cpp
+   ui/taggingwindow.cpp
    ui/thumbnaillist.cpp
    ui/toc.cpp
    ui/tocmodel.cpp
