Change name to BarraQDA

--- a/shell/CMakeLists.txt
+++ b/shell/CMakeLists.txt
@@ -4,36 +4,37 @@ include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}/../
 )
 
-# okular
+# barraqda
 
-set(okular_SRCS
+set(barraqda_SRCS
    main.cpp
    okular_main.cpp
    shell.cpp
    shellutils.cpp
 )
 
-file(GLOB ICONS_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../ui/data/icons/*-apps-okular.png")
-ecm_add_app_icon(okular_SRCS ICONS ${ICONS_SRCS})
+message("CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}")
+file(GLOB ICONS_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/../ui/data/icons/*-apps-barraqda.png")
+ecm_add_app_icon(barraqda_SRCS ICONS ${ICONS_SRCS})
 
-add_executable(okular ${okular_SRCS})
+add_executable(barraqda ${barraqda_SRCS})
 
 if(NOT BUILD_SHARED_LIBS)
-    target_link_libraries(okular KF5::Parts KF5::WindowSystem KF5::Crash KF5::Archive okularcore okularpart)
+    target_link_libraries(barraqda KF5::Parts KF5::WindowSystem KF5::Crash KF5::Archive okularcore okularpart)
 else()
-    target_link_libraries(okular KF5::Parts KF5::WindowSystem KF5::Crash)
+    target_link_libraries(barraqda KF5::Parts KF5::WindowSystem KF5::Crash)
 endif()
 if(TARGET KF5::Activities)
-    target_compile_definitions(okular PUBLIC -DWITH_KACTIVITIES=1)
+    target_compile_definitions(barraqda PUBLIC -DWITH_KACTIVITIES=1)
 
-	target_link_libraries(okular KF5::Activities)
+	target_link_libraries(barraqda KF5::Activities)
 endif()
 
-install(TARGETS okular ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS barraqda ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
 
 
-# okular shell data files
+# barraqda shell data files
 
-install( PROGRAMS org.kde.okular.desktop  DESTINATION  ${KDE_INSTALL_APPDIR} )
-install( FILES shell.rc DESTINATION ${KDE_INSTALL_KXMLGUI5DIR}/okular )
-install( FILES org.kde.okular.appdata.xml DESTINATION  ${KDE_INSTALL_METAINFODIR} )
+install( PROGRAMS org.kde.barraqda.desktop  DESTINATION  ${KDE_INSTALL_APPDIR} )
+install( FILES shell.rc DESTINATION ${KDE_INSTALL_KXMLGUI5DIR}/barraqda )
+install( FILES org.kde.barraqda.appdata.xml DESTINATION  ${KDE_INSTALL_METAINFODIR} )
