--- a/ui/data/icons/CMakeLists.txt
+++ b/ui/data/icons/CMakeLists.txt
@@ -1,1 +1,1 @@
-ecm_install_icons( ICONS 128-apps-okular.png  16-apps-okular.png  22-apps-okular.png  32-apps-okular.png  48-apps-okular.png  64-apps-okular.png DESTINATION ${KDE_INSTALL_ICONDIR} THEME hicolor )
+ecm_install_icons( ICONS 128-apps-barraqda.png  16-apps-barraqda.png  22-apps-barraqda.png  32-apps-barraqda.png  48-apps-barraqda.png  64-apps-barraqda.png DESTINATION ${KDE_INSTALL_ICONDIR} THEME hicolor )
