--- a/shell/shell.rc
+++ b/shell/shell.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui version="7" name="okular_shell" >
+<kpartgui version="7" name="barraqda_shell" >
  <MenuBar>
   <Menu name="file" >
    <DefineGroup append="open_merge" name="file_open" />
